[package]
name = "rake"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
hex = "0.4"
rayon = "1.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand = "0.8.5"
heck = "0.5.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
